--- a/projects/projects-weekly/project-01/starter-code/project_1.ipynb
+++ b/projects/projects-weekly/project-01/starter-code/project_1.ipynb
@@ -20,9 +20,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data shows averages of SAT scores by state including participation percentage in each state.\n",
+    "$The\\ data\\ shows averages of SAT scores by state including participation percentage in each state.\n",
     "\n",
-    "This data, taken from the College Board, gives the mean SAT math and verbal scores, and the participation rate for each state and the District of Columbia for the year 2001.\n"
+    "This data, taken from the College Board, gives the mean SAT math and verbal scores, and the participation rate for each state and the District of Columbia for the year 2001.$\n"
    ]
   },
   {
@@ -48,27 +48,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "IOError",
-     "evalue": "[Errno 2] No such file or directory: './assets/sat_scores.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-d7ddfdd1e44a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./assets/sat_scores.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rU'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: './assets/sat_scores.csv'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['State', 'Rate', 'Verbal', 'Math']\n",
+      "['CT', '82', '509', '510']\n",
+      "['NJ', '81', '499', '513']\n",
+      "['MA', '79', '511', '515']\n",
+      "['NY', '77', '495', '505']\n",
+      "['NH', '72', '520', '516']\n",
+      "['RI', '71', '501', '499']\n",
+      "['PA', '71', '500', '499']\n",
+      "['VT', '69', '511', '506']\n",
+      "['ME', '69', '506', '500']\n",
+      "['VA', '68', '510', '501']\n",
+      "['DE', '67', '501', '499']\n",
+      "['MD', '65', '508', '510']\n",
+      "['NC', '65', '493', '499']\n",
+      "['GA', '63', '491', '489']\n",
+      "['IN', '60', '499', '501']\n",
+      "['SC', '57', '486', '488']\n",
+      "['DC', '56', '482', '474']\n",
+      "['OR', '55', '526', '526']\n",
+      "['FL', '54', '498', '499']\n",
+      "['WA', '53', '527', '527']\n",
+      "['TX', '53', '493', '499']\n",
+      "['HI', '52', '485', '515']\n",
+      "['AK', '51', '514', '510']\n",
+      "['CA', '51', '498', '517']\n",
+      "['AZ', '34', '523', '525']\n",
+      "['NV', '33', '509', '515']\n",
+      "['CO', '31', '539', '542']\n",
+      "['OH', '26', '534', '439']\n",
+      "['MT', '23', '539', '539']\n",
+      "['WV', '18', '527', '512']\n",
+      "['ID', '17', '543', '542']\n",
+      "['TN', '13', '562', '553']\n",
+      "['NM', '13', '551', '542']\n",
+      "['IL', '12', '576', '589']\n",
+      "['KY', '12', '550', '550']\n",
+      "['WY', '11', '547', '545']\n",
+      "['MI', '11', '561', '572']\n",
+      "['MN', '9', '580', '589']\n",
+      "['KS', '9', '577', '580']\n",
+      "['AL', '9', '559', '554']\n",
+      "['NE', '8', '562', '568']\n",
+      "['OK', '8', '567', '561']\n",
+      "['MO', '8', '577', '577']\n",
+      "['LA', '7', '564', '562']\n",
+      "['WI', '6', '584', '596']\n",
+      "['AR', '6', '562', '550']\n",
+      "['UT', '5', '575', '570']\n",
+      "['IA', '5', '593', '603']\n",
+      "['SD', '4', '577', '582']\n",
+      "['ND', '4', '592', '599']\n",
+      "['MS', '4', '566', '551']\n",
+      "['All', '45', '506', '514']\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "import csv\n",
     "\n",
-    "with open('./assets/sat_scores.csv', 'rU') as f:\n",
+    "with open('../assets/sat_scores.csv', 'rU') as f:\n",
     "    reader = csv.reader(f)\n",
     "    for row in reader:\n",
     "        print row\n",
