--- a/curriculum/week-01/3.1-notebooks-csvs/w1d3-jupyter-notebooks-csvs-lecture.ipynb
+++ b/curriculum/week-01/3.1-notebooks-csvs/w1d3-jupyter-notebooks-csvs-lecture.ipynb
@@ -342,9 +342,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [python2]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [python2]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
