--- a/curriculum/week-02/2.3-data-cleaning/w2d2-data-cleaning-lecture.ipynb
+++ b/curriculum/week-02/2.3-data-cleaning/w2d2-data-cleaning-lecture.ipynb
@@ -4386,32 +4386,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "32.732539    1\n",
-       "36.282033    1\n",
-       "33.417852    1\n",
-       "25.595019    1\n",
-       "22.948176    1\n",
-       "Name: 2015_margin, dtype: int64"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.841363     1\n",
+      "11.505838    1\n",
+      "6.792889     1\n",
+      "4.904447     1\n",
+      "11.997117    1\n",
+      "Name: volume_sold, dtype: int64\n",
+      "32.732539    1\n",
+      "36.282033    1\n",
+      "33.417852    1\n",
+      "25.595019    1\n",
+      "22.948176    1\n",
+      "Name: 2015_margin, dtype: int64\n"
+     ]
     }
    ],
    "source": [
     "#s = pd.series()\n",
     "\n",
-    "si['volume_sold'].value_counts().head()\n",
-    "si['2015_margin'].value_counts().head()"
+    "print si['volume_sold'].value_counts().head()\n",
+    "print si['2015_margin'].value_counts().head()"
    ]
   },
   {
