--- a/curriculum/week-01/4.2-intro-stats-numpy/w1d4-intro-numpy-stats-lecture.ipynb
+++ b/curriculum/week-01/4.2-intro-stats-numpy/w1d4-intro-numpy-stats-lecture.ipynb
@@ -531,11 +531,12 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [python2]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [python2]"
   },
   "language_info": {
    "codemirror_mode": {
