--- a/curriculum/week-02/2.2-lab-pandas-2/code/starter-code/w2-2.2-challenge.ipynb
+++ b/curriculum/week-02/2.2-lab-pandas-2/code/starter-code/w2-2.2-challenge.ipynb
@@ -3182,7 +3182,14 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "import seaborn as sns\n",
+    "\n",
+    "fig, ax = plt.subplots()\n"
+   ]
   },
   {
    "cell_type": "markdown",
