--- a/curriculum/week-01/2.2-intro-to-python/w1d2-python-data-types.ipynb
+++ b/curriculum/week-01/2.2-intro-to-python/w1d2-python-data-types.ipynb
@@ -1833,96 +1833,14 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lst = [1,2,3,4,5]\n",
-    "\n",
-    "lst"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
-     ]
-    }
-   ],
-   "source": [
-    "for x in lst:\n",
-    "    print x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n"
-     ]
-    }
-   ],
-   "source": [
-    "for x in lst:\n",
-    "    print x*2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
-  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [python2]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [python2]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
