--- a/projects/projects-weekly/project-02/Project 2 - Andrew Jeong.ipynb
+++ b/projects/projects-weekly/project-02/Project 2 - Andrew Jeong.ipynb
@@ -103,11 +103,20 @@
    "outputs": [],
    "source": [
     "bb = pd.read_csv('assets/billboard.csv')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hypothesis: \n",
+    "   \n",
+    "    1 Does length of song have influence on the time it takes to peak\n",
+    "    \n",
+    "    2 Does genre have an influence on time it takes to peak/ or length of song\n",
     "\n",
-    "# hypothesis: does length of song have influence on the time it takes to peak\n",
-    "# hypothesis: Does genre have an influence on time it takes to peak/ or length of song\n",
-    "\n",
-    "# The genre Rap takes the longest time to peak from being on top 100.\n"
+    "The genre Rap takes the longest time to peak from being on top 100.\n"
    ]
   },
   {
