--- a/projects/projects-weekly/project-02/Project 2 - Andrew Jeong.ipynb
+++ b/projects/projects-weekly/project-02/Project 2 - Andrew Jeong.ipynb
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -1138,119 +1138,260 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>226.689189</td>\n",
-       "      <td>270.750000</td>\n",
-       "      <td>330.0</td>\n",
-       "      <td>470.0</td>\n",
-       "      <td>254.444444</td>\n",
-       "      <td>225.000000</td>\n",
-       "      <td>242.956522</td>\n",
-       "      <td>243.396552</td>\n",
-       "      <td>257.0</td>\n",
-       "      <td>247.547445</td>\n",
+       "      <td>226.689</td>\n",
+       "      <td>270.75</td>\n",
+       "      <td>330</td>\n",
+       "      <td>470</td>\n",
+       "      <td>254.444</td>\n",
+       "      <td>225</td>\n",
+       "      <td>242.957</td>\n",
+       "      <td>243.397</td>\n",
+       "      <td>257</td>\n",
+       "      <td>247.547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>median</th>\n",
-       "      <td>223.500000</td>\n",
-       "      <td>232.000000</td>\n",
-       "      <td>330.0</td>\n",
-       "      <td>470.0</td>\n",
-       "      <td>239.000000</td>\n",
-       "      <td>224.000000</td>\n",
-       "      <td>235.000000</td>\n",
-       "      <td>240.000000</td>\n",
-       "      <td>257.0</td>\n",
-       "      <td>244.000000</td>\n",
+       "      <td>223.5</td>\n",
+       "      <td>232</td>\n",
+       "      <td>330</td>\n",
+       "      <td>470</td>\n",
+       "      <td>239</td>\n",
+       "      <td>224</td>\n",
+       "      <td>235</td>\n",
+       "      <td>240</td>\n",
+       "      <td>257</td>\n",
+       "      <td>244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mode</th>\n",
+       "      <td>([234], [3])</td>\n",
+       "      <td>([209], [1])</td>\n",
+       "      <td>([330], [1])</td>\n",
+       "      <td>([470], [1])</td>\n",
+       "      <td>([242], [2])</td>\n",
+       "      <td>([199], [1])</td>\n",
+       "      <td>([231], [2])</td>\n",
+       "      <td>([230], [3])</td>\n",
+       "      <td>([257], [1])</td>\n",
+       "      <td>([232], [5])</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>38.378763</td>\n",
-       "      <td>93.692316</td>\n",
+       "      <td>38.3788</td>\n",
+       "      <td>93.6923</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>78.597250</td>\n",
-       "      <td>15.231546</td>\n",
-       "      <td>48.266757</td>\n",
-       "      <td>29.780448</td>\n",
+       "      <td>78.5973</td>\n",
+       "      <td>15.2315</td>\n",
+       "      <td>48.2668</td>\n",
+       "      <td>29.7804</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>37.602990</td>\n",
+       "      <td>37.603</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>var</th>\n",
-       "      <td>1472.929471</td>\n",
-       "      <td>8778.250000</td>\n",
+       "      <td>1472.93</td>\n",
+       "      <td>8778.25</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>6177.527778</td>\n",
-       "      <td>232.000000</td>\n",
-       "      <td>2329.679842</td>\n",
-       "      <td>886.875076</td>\n",
+       "      <td>6177.53</td>\n",
+       "      <td>232</td>\n",
+       "      <td>2329.68</td>\n",
+       "      <td>886.875</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1413.984865</td>\n",
+       "      <td>1413.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>len</th>\n",
-       "      <td>74.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>23.000000</td>\n",
-       "      <td>58.000000</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>137.000000</td>\n",
+       "      <td>74</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>23</td>\n",
+       "      <td>58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>137</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "genre       Country  Electronica  Gospel   Jazz        Latin         Pop  \\\n",
-       "mean     226.689189   270.750000   330.0  470.0   254.444444  225.000000   \n",
-       "median   223.500000   232.000000   330.0  470.0   239.000000  224.000000   \n",
-       "std       38.378763    93.692316     NaN    NaN    78.597250   15.231546   \n",
-       "var     1472.929471  8778.250000     NaN    NaN  6177.527778  232.000000   \n",
-       "len       74.000000     4.000000     1.0    1.0     9.000000    9.000000   \n",
+       "genre        Country   Electronica        Gospel          Jazz         Latin  \\\n",
+       "mean         226.689        270.75           330           470       254.444   \n",
+       "median         223.5           232           330           470           239   \n",
+       "mode    ([234], [3])  ([209], [1])  ([330], [1])  ([470], [1])  ([242], [2])   \n",
+       "std          38.3788       93.6923           NaN           NaN       78.5973   \n",
+       "var          1472.93       8778.25           NaN           NaN       6177.53   \n",
+       "len               74             4             1             1             9   \n",
        "\n",
-       "genre           R&B         Rap  Reggae         Rock  \n",
-       "mean     242.956522  243.396552   257.0   247.547445  \n",
-       "median   235.000000  240.000000   257.0   244.000000  \n",
-       "std       48.266757   29.780448     NaN    37.602990  \n",
-       "var     2329.679842  886.875076     NaN  1413.984865  \n",
-       "len       23.000000   58.000000     1.0   137.000000  "
+       "genre            Pop           R&B           Rap        Reggae          Rock  \n",
+       "mean             225       242.957       243.397           257       247.547  \n",
+       "median           224           235           240           257           244  \n",
+       "mode    ([199], [1])  ([231], [2])  ([230], [3])  ([257], [1])  ([232], [5])  \n",
+       "std          15.2315       48.2668       29.7804           NaN        37.603  \n",
+       "var              232       2329.68       886.875           NaN       1413.98  \n",
+       "len                9            23            58             1           137  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.pivot_table(bb, index = 'genre', values = 'time', aggfunc = [np.mean, np.median, np.std, np.var, len]).T\n"
+    "pd.pivot_table(bb, index = 'genre', values = 'time', aggfunc = [np.mean, np.median, stats.mode, np.std, np.var, len]).T\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'module' object has no attribute 'mode'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-44-a835feb473a8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'time'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#What goes into a billboard? make the selection\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'module' object has no attribute 'mode'"
-     ]
+     "data": {
+      "text/plain": [
+       "Index([u'year', u'artist.inverted', u'track', u'time', u'genre',\n",
+       "       u'date.entered', u'date.peaked', u'x1st.week', u'x2nd.week',\n",
+       "       u'x3rd.week', u'x4th.week', u'x5th.week', u'x6th.week', u'x7th.week',\n",
+       "       u'x8th.week', u'x9th.week', u'x10th.week', u'x11th.week', u'x12th.week',\n",
+       "       u'x13th.week', u'x14th.week', u'x15th.week', u'x16th.week',\n",
+       "       u'x17th.week', u'x18th.week', u'x19th.week', u'x20th.week',\n",
+       "       u'x21st.week', u'x22nd.week', u'x23rd.week', u'x24th.week',\n",
+       "       u'x25th.week', u'x26th.week', u'x27th.week', u'x28th.week',\n",
+       "       u'x29th.week', u'x30th.week', u'x31st.week', u'x32nd.week',\n",
+       "       u'x33rd.week', u'x34th.week', u'x35th.week', u'x36th.week',\n",
+       "       u'x37th.week', u'x38th.week', u'x39th.week', u'x40th.week',\n",
+       "       u'x41st.week', u'x42nd.week', u'x43rd.week', u'x44th.week',\n",
+       "       u'x45th.week', u'x46th.week', u'x47th.week', u'x48th.week',\n",
+       "       u'x49th.week', u'x50th.week', u'x51st.week', u'x52nd.week',\n",
+       "       u'x53rd.week', u'x54th.week', u'x55th.week', u'x56th.week',\n",
+       "       u'x57th.week', u'x58th.week', u'x59th.week', u'x60th.week',\n",
+       "       u'x61st.week', u'x62nd.week', u'x63rd.week', u'x64th.week',\n",
+       "       u'x65th.week', u'x66th.week', u'x67th.week', u'x68th.week',\n",
+       "       u'x69th.week', u'x70th.week', u'x71st.week', u'x72nd.week',\n",
+       "       u'x73rd.week', u'x74th.week', u'x75th.week', u'x76th.week'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#What goes into a billboard?"
+    "bb.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'What goes into a billboard?\\n\\nSales, Airplay, & Streaming'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''What goes into a billboard?\n",
+    "sales (albums), airplay (radio)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      14 days\n",
+       "1       7 days\n",
+       "2     217 days\n",
+       "3      42 days\n",
+       "4      21 days\n",
+       "5      42 days\n",
+       "6      21 days\n",
+       "7      91 days\n",
+       "8      35 days\n",
+       "9      56 days\n",
+       "10     49 days\n",
+       "11     77 days\n",
+       "12     70 days\n",
+       "13     49 days\n",
+       "14     56 days\n",
+       "15     14 days\n",
+       "16    210 days\n",
+       "17      0 days\n",
+       "18     98 days\n",
+       "19     21 days\n",
+       "20     42 days\n",
+       "21     21 days\n",
+       "22     91 days\n",
+       "23     77 days\n",
+       "24     49 days\n",
+       "25     35 days\n",
+       "26     49 days\n",
+       "27     91 days\n",
+       "28     77 days\n",
+       "29     42 days\n",
+       "        ...   \n",
+       "287    35 days\n",
+       "288    49 days\n",
+       "289    21 days\n",
+       "290    56 days\n",
+       "291   105 days\n",
+       "292    28 days\n",
+       "293     7 days\n",
+       "294   105 days\n",
+       "295     0 days\n",
+       "296    63 days\n",
+       "297    14 days\n",
+       "298    63 days\n",
+       "299    49 days\n",
+       "300    70 days\n",
+       "301   175 days\n",
+       "302    56 days\n",
+       "303    14 days\n",
+       "304    56 days\n",
+       "305    49 days\n",
+       "306     0 days\n",
+       "307    91 days\n",
+       "308    63 days\n",
+       "309    42 days\n",
+       "310    77 days\n",
+       "311    42 days\n",
+       "312    21 days\n",
+       "313    28 days\n",
+       "314    42 days\n",
+       "315     0 days\n",
+       "316    84 days\n",
+       "dtype: timedelta64[ns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bb['date.peaked']- bb['date.entered']"
    ]
   },
   {
